fix the file name and the bug

--- a/data_to_csv_v2.ipynb
+++ b/data_to_csv_v2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
     "        # Commit the changes\n",
     "        self.conn.commit()\n",
     "\n",
-    "    def insert_json_data_to_db(self, json_data):\n",
+    "    def insert_json_data_to_db(self, json_data_str):\n",
     "    \n",
     "            # # Parse the JSON data\n",
     "            # data = json.loads(json_data)\n",
@@ -98,19 +98,21 @@
     "            # else:\n",
     "            #     data = json_data\n",
     "    \n",
+    "            json_data = json.loads(json_data_str)\n",
+    "\n",
     "            insert_sql = '''\n",
     "                INSERT INTO {} (title, blog_picture_link, primary_keyword, other_keywords, funnel, minutes, date, reference) VALUES (?, ?, ?, ?, ?, ?, ?, ?)\n",
     "            '''.format(self.meta_table)\n",
     "\n",
     "            self.conn.execute(insert_sql, (\n",
-    "                json_data['title'],\n",
-    "                json_data['blog picture link'],\n",
-    "                json_data['primary keyword'],\n",
-    "                json.dumps(json_data['other_keywords']),  # Convert the list to a JSON string\n",
-    "                json_data['funnel'],\n",
-    "                json_data['minutes'],\n",
-    "                json_data['date'],\n",
-    "                json_data['reference']\n",
+    "                json_data.get('title', ''),\n",
+    "                json_data.get('blog picture link', ''),\n",
+    "                json_data.get('primary keyword', ''),\n",
+    "                json.dumps(json_data.get('other_keywords', [])),  # Convert the list to a JSON string\n",
+    "                json_data.get('funnel', ''),\n",
+    "                int(json_data.get('minutes', 0)),  # Default value if 'minutes' is missing or not a number\n",
+    "                json_data.get('date', ''),\n",
+    "                json_data.get('reference', '')\n",
     "            ))\n",
     "\n",
     "            # Commit the transaction and close the connection\n",
@@ -136,7 +138,7 @@
     "    def export_to_csv(self):\n",
     "        # Retrieve data from table1 and export it to CSV1\n",
     "        conn = sqlite3.connect(self.database_filename)\n",
-    "        query1 = \"SELECT * FROM {self.date_table}\"\n",
+    "        query1 = f\"SELECT * FROM {self.data_table}\"\n",
     "        df1 = pd.read_sql_query(query1, conn)\n",
     "        df1.to_csv(self.csv_data_filename, index=False)\n",
     "\n",
@@ -153,12 +155,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "json_test = {\n",
+    "json_test = '''{\n",
     "    \"title\": \"Developing a Winning Customer Engagement Strategy: Key Strategies and Optimization\",\n",
     "    \"blog picture link\": \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-XsbS2SJ0y6rGde6yJBagVpWT/user-A4WpGwDF6YUHHn0rJoaDsjhh/img-lQWsMQncoh3u1CYRZLIgolpC.png?st=2024-01-25T06%3A53%3A54Z&se=2024-01-25T08%3A53%3A54Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-01-25T04%3A36%3A32Z&ske=2024-01-26T04%3A36%3A32Z&sks=b&skv=2021-08-06&sig=FJhEeGWvXNYEZyQJK05X5yjD5mdV1b6BVZmzwuqFq%2Bw%3D\",\n",
     "    \"primary keyword\": \"customer engagement strategy\",\n",
@@ -178,10 +180,103 @@
     "    \"minutes\": 2.61,\n",
     "    \"date\": \"2024-01-24\",\n",
     "    \"reference\": \"https://segment.com/growth-center/customer-engagement/winning-engagement-strategy/\"\n",
-    "    }\n",
+    "    }'''\n",
+    "\n",
     "\n",
     "db = BlogDataToDatabase('test_blog_data.db')\n",
     "db.insert_json_data_to_db(json_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "json_data = json.loads(json_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'title': 'Developing a Winning Customer Engagement Strategy: Key Strategies and Optimization', 'blog picture link': 'https://oaidalleapiprodscus.blob.core.windows.net/private/org-XsbS2SJ0y6rGde6yJBagVpWT/user-A4WpGwDF6YUHHn0rJoaDsjhh/img-lQWsMQncoh3u1CYRZLIgolpC.png?st=2024-01-25T06%3A53%3A54Z&se=2024-01-25T08%3A53%3A54Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-01-25T04%3A36%3A32Z&ske=2024-01-26T04%3A36%3A32Z&sks=b&skv=2021-08-06&sig=FJhEeGWvXNYEZyQJK05X5yjD5mdV1b6BVZmzwuqFq%2Bw%3D', 'primary keyword': 'customer engagement strategy', 'other_keywords': ['Winning engagement strategy', 'Optimization', 'Personalization', 'Communication channels', 'Value proposition', 'Emotional connection', 'Goals and objectives', 'Segmenting and targeting', 'Multiple communication channels', 'Measuring and optimizing engagement'], 'funnel': 'bottom', 'minutes': 2.61, 'date': '2024-01-24', 'reference': 'https://segment.com/growth-center/customer-engagement/winning-engagement-strategy/'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "type(json_data)\n",
+    "print(json_data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "list"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "other_keywords = json_data.get('other_keywords', [])\n",
+    "type(other_keywords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Winning engagement strategy', 'Optimization', 'Personalization', 'Communication channels', 'Value proposition', 'Emotional connection', 'Goals and objectives', 'Segmenting and targeting', 'Multiple communication channels', 'Measuring and optimizing engagement']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(other_keywords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = json.dumps(other_keywords)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[\"Winning engagement strategy\", \"Optimization\", \"Personalization\", \"Communication channels\", \"Value proposition\", \"Emotional connection\", \"Goals and objectives\", \"Segmenting and targeting\", \"Multiple communication channels\", \"Measuring and optimizing engagement\"]\n"
+     ]
+    }
+   ],
+   "source": [
+    "type(a)\n",
+    "print(a)"
    ]
   }
  ],
