content generation of 5 blogs

--- a/execute_autogenerate.ipynb
+++ b/execute_autogenerate.ipynb
@@ -212,6 +212,31 @@
    "source": [
     "g.export()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an instance of your ContentGenerator\n",
+    "g = AutoGenerator('blog_v2.db')\n",
+    "keyword_link_pairs = [\n",
+    "    (\"website audit\", \"https://blog.hubspot.com/marketing/website-audit\"),\n",
+    "    (\"website audit checklist\", \"https://www.adcisolutions.com/knowledge/how-conduct-website-audit-beginners-guide\"),\n",
+    "    (\"Ecommerce Website Audit\", \"https://www.semrush.com/blog/ecommerce-website-audit-pro/\"),\n",
+    "    (\"Ecommerce SEO Audit\", \"https://neilpatel.com/blog/e-commerce-seo-audits/\"),\n",
+    "    (\"SEO SWOT Analysis\", \"https://www.searchenginejournal.com/seo-swot-analysis-how-to/395830/\"),\n",
+    "    # Add more pairs as needed\n",
+    "]\n",
+    "\n",
+    "# Iterate over the pairs and generate content for each\n",
+    "for keyword, link in keyword_link_pairs:\n",
+    "    g.create(link, keyword)\n",
+    "    # Do something with the generated content, e.g., save it to a file or database\n",
+    "\n",
+    "g.export()"
+   ]
   }
  ],
  "metadata": {
