--- a/convert_pic_v1.ipynb
+++ b/convert_pic_v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,51 +18,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def download_image(url, filename):\n",
-    "    #os.makedirs(folder, exist_ok=True)  # Create the folder if it doesn't exist\n",
-    "    folder = \"downloaded_images\"\n",
-    "    filepath = os.path.join(folder, filename)\n",
-    "    \n",
-    "    response = requests.get(url)\n",
-    "    with open(filepath, 'wb') as file:\n",
-    "        file.write(response.content)\n",
-    "    \n",
-    "    return filepath\n",
-    "\n",
-    "def upload_image_to_webflow(api_key, site_id, collection_id, item_id, image_path):\n",
+    "def upload_image_to_webflow(item_id, image_path):\n",
     "    \n",
     "    url = \"https://api.webflow.com/v2/collections/654dc03da84a4b549caf41b6/items/{item_id}\"\n",
     "\n",
     "    payload = {\n",
     "        \"isArchived\": False,\n",
-    "        \"isDraft\": False\n",
+    "        \"isDraft\": False,\n",
+    "        \"id\": \n",
     "    }\n",
     "\n",
     "    headers = {\n",
-    "        \"accept\": \"application/json\",\n",
-    "        \"content-type\": \"application/json\",\n",
+    "        \"accept\": \"image/jpeg\",\n",
+    "        \"content-type\": \"image/jpeg\",\n",
     "        \"authorization\": \"Bearer 01167d9671eb8b0217697208c69fa5f72312331e286cce274f628961d70b07cd\"\n",
     "    }\n",
     "\n",
-    "    \n",
+    "    response = requests.post(url, headers=headers, files=payload)\n",
     "\n",
-    "    with open(image_path, 'rb') as file:\n",
-    "        files = {'files.image': (image_path, file)}\n",
-    "\n",
-    "        response = requests.patch(url, headers=headers, files=files)\n",
-    "\n",
+    "    # Check the response\n",
     "    if response.status_code == 200:\n",
-    "        print(f\"Image uploaded successfully for item ID {item_id}\")\n",
+    "        print('Image uploaded successfully!')\n",
     "    else:\n",
-    "        print(f\"Error uploading image. Status code: {response.status_code}\")\n",
-    "        print(response.text)\n",
+    "        print('Failed to upload image:', response.text)\n",
     "\n",
     "# need to use item id means to export and import again "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -126,18 +111,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'The Power of Multivariate Analysis: Exploring Techniques and Benefits': '65c1ade6e90f56de3809532f', 'The Ultimate Guide to SEO SWOT Analysis: Conduct an Effective Analysis': '65c1a7db098882ebb1efa181', 'Ecommerce SEO Audit: The Ultimate Guide to Boosting Your Online Store': '65c1a7dbab08f26bc54c5cca', 'Ecommerce Website Audit: The Ultimate Guide to Boosting Your Online Store': '65c1a7dbc287504a11879810', 'The Ultimate Website Audit Checklist: Optimize Your Online Presence': '65c1a7db37e047b6976877ca', 'The Complete Website Audit Guide: Steps, Tools, and Benefits for Effective Analysis': '65c1a7dbcbcbee568e86fd3f', \"Mastering Conversion Goals: A Comprehensive Guide to Boosting Your Website's Performance\": '65b9eb2f4dae393460e43800', 'The Ultimate Guide to Creating a Successful Conversion Rate Optimization (CRO) Plan': '65b9eb2fdc892decf4776991', 'The Essential Metrics for Successful E-commerce Product Management': '65b9e880561539d8edd1d93c', 'Unlocking Success: The Power of Micro-Conversions in Conversion Rate Optimization': '65b9e8802165397400893826', 'Understanding Macro Conversions: Key Differences and Importance of Analyzing Both Types': '65b9e88006058390ebac4414', 'The Basics of Conversion Rate Optimization (CRO): A Comprehensive Guide': '65b9e3fad5ad347ff0bab89a', 'The Ultimate Guide to Creating a Conversion Roadmap: Boost Your Online Success': '65b7470b8518a835a6d58357', 'Navigating the World of Controlled Experiments: Understanding A/B Testing, Experimentation, and More': '65b2059546e39b9b0ba1aefb', 'The Evolution of A/B Testing: From Controlled Experiments to Online Optimization': '65a9e15857b7b81d3ea3a849', '10 Key Metrics to Track and Measure A/B Testing Results': '65a78c5fae11973b6368a317', 'Price Test Basics: How to Optimize Your E-Commerce Store': '659cf35dfdfa874c6a74e5ed', 'Mastering Price Testing in E-commerce with the ICE Framework': '655b813452d91ec54ad9218f', 'The Psychology of Online Shopping: Understanding Consumer Behavior': '655751a49d0eede5d5d8cd2d', 'Why Black Friday is the Best Day for Price Testing': '6556080510862c0f833eccf6', 'Glossary: A/B Testing Essentials for E-commerce': '6554880439732368f5ac32b5', 'The Ultimate Guide to Optimizing Your Shopify Store with ABConvert': '65532d7d25d40f3e2bc3e7bf', 'Understanding Split Testing: A Comparative Look with A/B Testing': '6552109b74e492587b99c7c9', 'The Art of Price Testing: Key to Maximizing Store Profits': '655206caa0623d92b0f406d5', 'A Comprehensive Guide to A/B Testing for Conversion Rate Optimization': '6550d4f6308e88ddc88b451a', \"Unlocking E-commerce Success: A Beginner's Guide to A/B Testing\": '654f8347c2ebf709d93f1dbe'}\n"
+     ]
+    }
+   ],
    "source": [
-    "blog = \"Mastering Conversion Goals: A Comprehensive Guide to Boosting Your Website's Performance\"\n",
-    "\n",
-    "url = \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-XsbS2SJ0y6rGde6yJBagVpWT/user-A4WpGwDF6YUHHn0rJoaDsjhh/img-kWrL3aPk80ujSBo5AX0AwYXh.png?st=2024-02-06T00%3A31%3A24Z&se=2024-02-06T02%3A31%3A24Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-02-05T13%3A53%3A00Z&ske=2024-02-06T13%3A53%3A00Z&sks=b&skv=2021-08-06&sig=AktRsvvrFxPNXLyWLk1M6j6s8/RU8MOFlLYtFy5tIeM%3D\"\n"
+    "print(get_item_id_by_blog_name())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "blog = \"The Power of Multivariate Analysis\"\n",
+    "\n",
+    "url = \"https://oaidalleapiprodscus.blob.core.windows.net/private/org-XsbS2SJ0y6rGde6yJBagVpWT/user-A4WpGwDF6YUHHn0rJoaDsjhh/img-PAp2WVsZzOS81beCDlS27vEY.png?st=2024-02-06T02%3A45%3A00Z&se=2024-02-06T04%3A45%3A00Z&sp=r&sv=2021-08-06&sr=b&rscd=inline&rsct=image/png&skoid=6aaadede-4fb3-4698-a8f6-684d7786b067&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2024-02-06T03%3A13%3A38Z&ske=2024-02-07T03%3A13%3A38Z&sks=b&skv=2021-08-06&sig=opn3%2BnOzUu5tafy4MULY%2BsRrwa7S27Klpe752p6Rg3A%3D\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,23 +155,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "UnidentifiedImageError",
-     "evalue": "cannot identify image file 'downloaded_images\\\\The.jpg'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnidentifiedImageError\u001b[0m                    Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_38188/2939169277.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mcompress_image\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_38188/1504276057.py\u001b[0m in \u001b[0;36mcompress_image\u001b[1;34m(input_path, max_size_kb)\u001b[0m\n\u001b[0;32m     12\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     13\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mcompress_image\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_path\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mmax_size_kb\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m4000\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 14\u001b[1;33m     \u001b[0mimage\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mImage\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0minput_path\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     15\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     16\u001b[0m     \u001b[1;31m# Compress image\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Packages\\PythonSoftwareFoundation.Python.3.9_qbz5n2kfra8p0\\LocalCache\\local-packages\\Python39\\site-packages\\PIL\\Image.py\u001b[0m in \u001b[0;36mopen\u001b[1;34m(fp, mode, formats)\u001b[0m\n\u001b[0;32m   3296\u001b[0m         \u001b[0mwarnings\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwarn\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmessage\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3297\u001b[0m     \u001b[0mmsg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;34m\"cannot identify image file %r\"\u001b[0m \u001b[1;33m%\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mfilename\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0mfilename\u001b[0m \u001b[1;32melse\u001b[0m \u001b[0mfp\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3298\u001b[1;33m     \u001b[1;32mraise\u001b[0m \u001b[0mUnidentifiedImageError\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmsg\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3299\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3300\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mUnidentifiedImageError\u001b[0m: cannot identify image file 'downloaded_images\\\\The.jpg'"
-     ]
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "compress_image(input_path)"
    ]
