--- a/execute_autogenerate.ipynb
+++ b/execute_autogenerate.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,9 +11,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'AutoGenerator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_18956/3624545481.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Create an instance of your ContentGenerator\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mg\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mAutoGenerator\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'blog_v1.db'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'AutoGenerator' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Create an instance of your ContentGenerator\n",
     "g = AutoGenerator('blog_v1.db')"
@@ -227,6 +239,56 @@
     "    (\"Ecommerce Website Audit\", \"https://www.semrush.com/blog/ecommerce-website-audit-pro/\"),\n",
     "    (\"Ecommerce SEO Audit\", \"https://neilpatel.com/blog/e-commerce-seo-audits/\"),\n",
     "    (\"SEO SWOT Analysis\", \"https://www.searchenginejournal.com/seo-swot-analysis-how-to/395830/\"),\n",
+    "    # Add more pairs as needed\n",
+    "]\n",
+    "\n",
+    "# Iterate over the pairs and generate content for each\n",
+    "for keyword, link in keyword_link_pairs:\n",
+    "    g.create(link, keyword)\n",
+    "    # Do something with the generated content, e.g., save it to a file or database\n",
+    "\n",
+    "g.export()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an instance of your ContentGenerator\n",
+    "g = AutoGenerator('blog_v3.db')\n",
+    "keyword_link_pairs = [\n",
+    "    (\"Experience Analytics\", \"https://vwo.com/blog/how-to-use-experience-analytics-to-reduce-your-apps-churn-rate/\"),\n",
+    "    (\"track user behavior\", \"https://www.crazyegg.com/blog/how-track-user-behavior/\"),\n",
+    "    (\"Psychographics in marketing \", \"https://www.hotjar.com/blog/psychographics-in-marketing/\"),\n",
+    "    (\"qualitative vs quantitative user research\", \"https://www.hotjar.com/blog/qualitative-vs-quantitative-user-research/\"),\n",
+    "    (\"exit rate in Google Analytics\", \"https://www.hotjar.com/google-analytics/glossary/exits/\"),\n",
+    "    # Add more pairs as needed\n",
+    "]\n",
+    "\n",
+    "# Iterate over the pairs and generate content for each\n",
+    "for keyword, link in keyword_link_pairs:\n",
+    "    g.create(link, keyword)\n",
+    "    # Do something with the generated content, e.g., save it to a file or database\n",
+    "\n",
+    "g.export()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an instance of your ContentGenerator\n",
+    "g = AutoGenerator('blog_v4.db')\n",
+    "keyword_link_pairs = [\n",
+    "    (\"Customer behavior analysis\", \"https://www.binarbase.com/article/customer-behavior-analysis-what-you-need-to-know\"),\n",
+    "    (\"hypotheses in ecommerce\", \"https://www.practicalecommerce.com/use-hypothesis-to-optimize-conversions\"),\n",
+    "    (\"A/B Test Hypothesis\", \"https://thegood.com/insights/form-effective-ab-test-hypothesis/\"),\n",
+    "    (\"marketing hypothesis\", \"https://conversion.com/blog/how-to-write-a-hypothesis/\"),\n",
+    "    (\"statistic significance\", \"https://vwo.com/stats-blog/the-forces-behind-statistical-significance/\")\n",
     "    # Add more pairs as needed\n",
     "]\n",
     "\n",
