--- a/execute_autogenerate.ipynb
+++ b/execute_autogenerate.ipynb
@@ -299,6 +299,31 @@
     "\n",
     "g.export()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create an instance of your ContentGenerator\n",
+    "g = AutoGenerator('blog_v5.db')\n",
+    "keyword_link_pairs = [\n",
+    "    (\"Conversion Testing Frameworks\", \"https://cxl.com/blog/4-frameworks-help-prioritize-conduct-conversion-testing/\"),\n",
+    "    (\"a/b testing for pricing\", \"https://www.starlightanalytics.com/article/price-testing\"),\n",
+    "    (\"a/b testing types\", \"https://www.mailmodo.com/guides/ab-testing/\"),\n",
+    "    (\"Usability Design Tips\", \"https://www.invespcro.com/blog/usability-design-for-a-better-user-experience/\"),\n",
+    "    (\"optimize website trust\", \"https://www.invespcro.com/blog/optimizing-for-trust-how-to-create-a-high-converting-website/\")\n",
+    "    # Add more pairs as needed\n",
+    "]\n",
+    "\n",
+    "# Iterate over the pairs and generate content for each\n",
+    "for keyword, link in keyword_link_pairs:\n",
+    "    g.create(link, keyword)\n",
+    "    # Do something with the generated content, e.g., save it to a file or database\n",
+    "\n",
+    "g.export()"
+   ]
   }
  ],
  "metadata": {
