update useless files and clean the folder

--- a/langchain_test_folder/langchain-research-data-1.ipynb
+++ b/langchain_test_folder/langchain-research-data-1.ipynb
@@ -15,8 +15,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "os.environ[\"OPENAI_API_KEY\"] =\"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\""
+    "import os"
    ]
   },
   {
